--- a/ServicesAndClients/Views/MainPage.axaml
+++ b/ServicesAndClients/Views/MainPage.axaml
@@ -6,5 +6,30 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="ServicesAndClients.MainPage"
 			 x:DataType="vm:MainPageVM">
-  Welcome to Avalonia!
+
+	<ScrollViewer>
+		<StackPanel>		
+			<ListBox ItemsSource="{Binding ServicesList}">
+				<ListBox.ItemTemplate>
+					<DataTemplate>
+						<Border BorderBrush="AliceBlue">
+							<StackPanel Orientation="Horizontal">
+								<StackPanel>
+									<Image Source="{Binding MainImagePath}" Height="50" Width="50" ></Image>
+								</StackPanel>
+								<StackPanel>
+									<TextBlock Text="{Binding Title}"></TextBlock>
+									<StackPanel  Orientation="Horizontal">
+										<!--<TextBlock Text="{Binding Cost}" TextDecorations="Strikethrough" IsVisible="{Binding IsVisCostWithDis}"></TextBlock>-->
+										<TextBlock Text="{Binding CostAndMin}"></TextBlock>
+									</StackPanel>									
+									<TextBlock Text="{Binding DiscountFormat}"></TextBlock>
+								</StackPanel>
+							</StackPanel>
+						</Border>
+					</DataTemplate>
+				</ListBox.ItemTemplate>			
+			</ListBox>		
+			</StackPanel>
+	</ScrollViewer>
 </UserControl>
