--- a/ServicesAndClients/Styles.axaml
+++ b/ServicesAndClients/Styles.axaml
@@ -6,5 +6,8 @@
     </Border>
   </Design.PreviewWith>
 
-  <!-- Add Styles Here -->
+
+	<Style Selector="TextBlock.UpdateCost">
+		<Setter Property="Margin" Value="0 0 5 0"></Setter>
+	</Style>
 </Styles>
