--- a/ServicesAndClients/Views/MainPage.axaml
+++ b/ServicesAndClients/Views/MainPage.axaml
@@ -18,18 +18,16 @@
 			<TextBox Classes="KodAdmin" Watermark="Введите код администратора" Text="{Binding KodAdmin}" IsVisible="{Binding IsVisitableAdmin}"></TextBox>
 			<Button Classes="ServBT" Content="Подтвердить" Command="{Binding GetKodAdmin}" IsVisible="{Binding IsVisitableAdmin}"></Button>
 			<StackPanel Classes="FilterDownUp">
-				<!--<ComboBox SelectedIndex="{Binding SelectedSort}" Classes="ChoiceSort">
+				<ComboBox SelectedIndex="{Binding SelectedSort}" Classes="ChoiceSort">
 					<ComboBoxItem>Без сортировки</ComboBoxItem>
+					<ComboBoxItem>По возрастанию стоимости</ComboBoxItem>
+					<ComboBoxItem>По убыванию стоимости</ComboBoxItem>
 					<ComboBoxItem>от 0 до 5%</ComboBoxItem>
 					<ComboBoxItem>от 5% до 15%</ComboBoxItem>
 					<ComboBoxItem>от 15% до 30%</ComboBoxItem>
 					<ComboBoxItem>от 30% до 70%</ComboBoxItem>
 					<ComboBoxItem>от 70% до 100%</ComboBoxItem>
-				</ComboBox>-->
-				<StackPanel Classes="FilterDownUp">
-					<RadioButton Content="По возрастанию стоимости" IsChecked="{Binding SortUp}"/>
-					<RadioButton Content="По убыванию стоимости" IsChecked="{Binding SortDown}"/>
-				</StackPanel>
+				</ComboBox>
 			</StackPanel>
 			<TextBlock Classes="head" Text="Список услуг"></TextBlock>
 		</StackPanel>
