--- a/ServicesAndClients/Views/MainWindow.axaml
+++ b/ServicesAndClients/Views/MainWindow.axaml
@@ -7,7 +7,7 @@
         x:Class="ServicesAndClients.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/school_logo.ico"
-        Title="ServicesAndClients">
+        Title="Школа иностранных языков">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
