--- a/ServicesAndClients/Views/PageAddEditServ.axaml
+++ b/ServicesAndClients/Views/PageAddEditServ.axaml
@@ -12,21 +12,25 @@
 		<conv:ImageConvert x:Key="ImageConvert"></conv:ImageConvert>
 	</UserControl.Resources>
 
-	<StackPanel Classes="Fon">
-		<TextBlock Classes="head" Text="{Binding HeadPage}"></TextBlock>
-		<StackPanel Classes="Serv">
-			<Button Command="{Binding ToMainPage}" Classes="AddServ" Content="Назад"></Button>
-			<Button Command="{Binding SaveAddEditServ}" Classes="AddServ" Content="{Binding NameBT}"></Button>
-		</StackPanel>		
-		<Border Margin="6 10 0 20" Classes="ServImage">
-			<Image Source="{Binding NewService.MainImagePath ,Converter={StaticResource ImageConvert}}"></Image>
-		</Border>
-		<Button HorizontalAlignment="Center" Command="{Binding AddOnePhoto}" Classes="AddServ" Content="Добавить фото"></Button>
-		<TextBox Classes="FieldsServ" Text="{Binding NewService.Id}" IsVisible="{Binding IsVisibleBT}" IsEnabled="{Binding IsEnableBT}"></TextBox>
-		<TextBox Classes="FieldsServ" Watermark="Введите название услуги" Text="{Binding NewService.Title}"></TextBox>
-		<TextBox Classes="FieldsServ" Watermark="Введите стоимость услуги" Text="{Binding Cost}"></TextBox>
-		<TextBox Classes="FieldsServ" Watermark="Введите длительность услуги (в минутах)" Text="{Binding DurationInMin}"></TextBox>
-		<TextBox Classes="FieldsServ" Watermark="Введите описание услуги" Text="{Binding NewService.Description}"></TextBox>
-		<TextBox Classes="FieldsServ" Watermark="Введите скидку услуги (в процентах)" Text="{Binding Discount}"></TextBox>
-	</StackPanel>	
+	<Grid RowDefinitions="12*,65*,7*">
+		<StackPanel Grid.Row="0">
+			<TextBlock Classes="head" Text="{Binding HeadPage}"></TextBlock>
+			<StackPanel Classes="Serv">
+				<Button Command="{Binding ToMainPage}" CommandParameter="{Binding IsAdmin}" Classes="BTBack" Content="Назад"></Button>
+				<Button Command="{Binding SaveAddEditServ}" CommandParameter="{Binding IsAdmin}" Classes="BTBack" Content="{Binding NameBT}"></Button>
+			</StackPanel>
+			</StackPanel>
+		<StackPanel Grid.Row="1">
+			<Border Margin="0 10 0 20" Classes="ServImageEdit">
+				<Image Source="{Binding NewService.MainImagePath ,Converter={StaticResource ImageConvert}}"></Image>
+			</Border>
+			<Button HorizontalAlignment="Center" Command="{Binding AddOnePhoto}" Classes="BTAddImage" Content="Добавить фото"></Button>
+			<TextBox Classes="FieldsServ" Text="{Binding NewService.Id}" IsVisible="{Binding IsVisibleBT}" IsEnabled="{Binding IsEnableBT}"></TextBox>
+			<TextBox Classes="FieldsServ" Watermark="Введите название услуги" Text="{Binding NewService.Title}"></TextBox>
+			<TextBox Classes="FieldsServ" Watermark="Введите стоимость услуги" Text="{Binding Cost}"></TextBox>
+			<TextBox Classes="FieldsServ" Watermark="Введите длительность услуги (в минутах)" Text="{Binding DurationInMin}"></TextBox>
+			<TextBox Classes="FieldsServ" Watermark="Введите описание услуги" Text="{Binding NewService.Description}"></TextBox>
+			<TextBox Classes="FieldsServ" Watermark="Введите скидку услуги (в процентах)" Text="{Binding Discount}"></TextBox>
+		</StackPanel>
+	</Grid>
 </UserControl>
